# almanaque-api

./: .dockerignore  .gitignore  docker-compose.yml  manage.py  pyproject.toml
.docker/: Dockerfile
.zed/: debug.json
config/: asgi.py  auth.py  exceptions.py  gcloud.py  settings.py  urls.py  wsgi.py
src/apps/memes/: apps.py  enums.py  filters.py  models.py  schemas.py  swagger.py
src/apps/memes/API/: routes.py
src/apps/memes/migrations/: 0001_initial.py  0002_keyword_remove_memes_url_memes_external_link_and_more.py  0003_alter_memes_keywords.py  0004_memes_thumbnail.py  0005_owner_memes_provider_memes_owner.py  0006_remove_memes_file_memes_media_alter_memes_thumbnail.py
src/apps/posts/: apps.py  enums.py  filters.py  models.py  schemas.py  services.py  signals.py  swagger.py
src/apps/posts/API/: routes.py
src/apps/posts/migrations/: 0001_initial.py  0002_favorites.py  0002_reactions.py  0003_alter_reactions_post_alter_reactions_user_and_more.py  0003_vector_extension.py  0004_posts_embedding_posts_post_embedding_ivfflat.py  (+2 more)
src/apps/reports/: apps.py  enums.py  models.py  schemas.py
src/apps/users/: apps.py  models.py  schemas.py  services.py
src/integrations/ai/: __init__.py
src/integrations/almanaque_ai/: __init__.py
src/integrations/gemini/: __init__.py
src/integrations/instagram/: __init__.py
src/integrations/openai/: __init__.py
src/integrations/postsyncer/: __init__.py  schemas.py
src/integrations/supabase/: __init__.py
src/utils/: func_retry.py  models.py  movie.py  schemas.py  string.py  upload_file.py
(+9 files in other folders)
